Added configuration files and Swager documentation

--- a/src/SchoolManager.API/appsettings.Development.json
+++ b/src/SchoolManager.API/appsettings.Development.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "schoolmanager": "Server=localhost;DataBase=schoolmanagerdb;Uid=root;Pwd=root;"
+    "schoolmanager": "Server=(localdb)\\mssqllocaldb;Database=SchoolManagerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 
 }
