--- a/src/SchoolManager.API/Properties/launchSettings.json
+++ b/src/SchoolManager.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/escolas/start",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "Selfhosting - Development": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/escolas/start",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -29,7 +29,7 @@
     "Selfhosting - Production": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/escolas/start",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       },
